<resources>
    <string name="app_name">DroidViewUtils</string>

    <string name="dvu_search_view">Search View</string>
    <string name="dvu_wheel_view">Wheel View</string>
    <string name="dvu_flipper_view">Flipper View</string>
    <string name="dvu_seek_bar_circle_view">Seek Bar Circle View</string>
    <string name="dvu_icons_view">Icons View</string>

    <string name="dvu_sb_circle_view_units">count</string>
    <string name="dvu_sb_circle_view_separator">of</string>
    <string name="dvu_sb_circle_view_increment">Increment</string>
    <string name="dvu_sb_circle_view_decrement">Decrement</string>

    <string-array name="dvu_wheel_view_example_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
        <item>Item 6</item>
        <item>Item 7</item>
        <item>Item 8</item>
        <item>Item 9</item>
        <item>Item 10</item>
    </string-array>

    <!-- https://fontawesome.com/icons?d=gallery&m=free -->
    <string name="dvu_icon_view_brands_icon">&#xf270;</string>
    <string name="dvu_icon_view_solid_icon">&#xf5d1;</string>
    <string name="dvu_icon_view_regular_icon">&#xf581;</string>
</resources>
