<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="iconsVm"
            type="github.com.vikramezhil.droidviewutils.viewmodel.IconsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">

        <github.com.vikramezhil.dvu.views.icons.DvuIconsView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dvu_icon_view_brands_icon"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:dvuIvBrandsIcon="true"/>

        <github.com.vikramezhil.dvu.views.icons.DvuIconsView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dvu_icon_view_solid_icon"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:dvuIvSolidIcon="true"/>

        <github.com.vikramezhil.dvu.views.icons.DvuIconsView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dvu_icon_view_regular_icon"
            android:textColor="@android:color/black"
            android:textSize="50sp"
            app:dvuIvRegularIcon="true"/>
    </LinearLayout>
</layout>